img fix
small fix for img display in the quiz page - no horizontal scroll.

--- a/views/static/style.css
+++ b/views/static/style.css
@@ -83,6 +83,12 @@ button:hover{
 	margin-bottom: 20px;
 }
 
+ .popImage{	
+	object-fit: scale-down;
+	max-width: 100%;
+	height: auto;
+ }
+
 .hidden{
 	display:none;
 }
@@ -128,11 +134,6 @@ button:hover{
 }
 
 .pretyPrint{
- img{	
-	object-fit: scale-down;
-	max-width: 100%;
-	height: auto;
- }
   tr>th:first-child,tr>td:first-child {
     word-break: break-all;
   }
